--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400,500,700,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/CSS/styless.css" />
+    <head>
+     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body>
     <header>
@@ -19,9 +20,8 @@
         <span class="first-part">Web</span>
         <span class="last-part">Studio</span>
       </a>
-
       <nav class="header-nav">
-        <ul>
+        <ul class="nav-list list"> 
           <li class="header-nav-item">
             <a href="" class="header-nav-link link">Студія</a>
           </li>
@@ -33,7 +33,7 @@
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="nav-list list">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li>
           <a class="header-link-tel link" href="tel:+380961111111"
@@ -49,7 +49,7 @@
       </section>
       <section class="pecul">
         <h2 calss="pecul-title">НАШІ ОСОБЛИВОСТІ</h2>
-        <ul>
+        <ul class="pecul-list list">
           <li>
             <h3 calss="pecul-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="pecul-title-before">
@@ -81,7 +81,7 @@
       </section>
       <section class="doing">
         <h2 class="doing-title">Чим ми займаємося</h2>
-        <ul>
+        <ul class="nav-list list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -110,7 +110,7 @@
       </section>
       <section class="team"></section>
       <h2 class="team-title">Наша команда</h2>
-      <ul>
+      <ul class="nav-list list">
         <li>
           <img
             src="./images/productdesigner.jpg"
@@ -154,22 +154,22 @@
         <span class="last-part">Studio</span>
       </a>
       <adress>
-        <ui>
+        <ul class="nav-list list">
           <li>
             <a
               href="https://goo.gl/maps/vRAwusQeGC3wzJm16"
               target="_blank"
               rel="noopener noreferrer nofolow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
+              >м. Київ, пр-т Лесі Українки, 26
+          </a>
+         </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li>
             <a class="header-link-tel link" href="tel:+380961111111"
               >+38 096 111 11</a
             >
           </li>
-        </ui>
+        </ul>
       </adress>
     </footer>
   </body>
